--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@
 :root {
     --first-color-font: rgb(31 41 55);
     --second-color-font: rgb(51 65 81);
+    --h3-size: 2em;
 }
 
 body {
@@ -32,6 +33,8 @@ header {
     backdrop-filter: blur(7.3px);
     -webkit-backdrop-filter: blur(7.3px);
 
+    z-index: 100;
+
     & nav {
         margin: 0.2% 0;
         display: flex;
@@ -39,6 +42,7 @@ header {
         
         background-color: green;
         border-radius: 10px;
+        
 
         
 
@@ -63,8 +67,9 @@ header {
 
 .inicio {
     width: 100%;
-    height: 70vh;
+    height: 60vh;
     padding-top: 15%;
+    margin-bottom: 10%;
     
     display: flex;
     align-items: center;
@@ -172,111 +177,90 @@ header {
 }
 
 section {
-    margin-bottom: 15%;
+    padding-top: 2.7em;
 }
 
 .container-cards-proyects {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 3%;
+    
     align-items: center;
     justify-content: stretch;
     justify-items: stretch;
+    row-gap: 2%;
     
 
     & .card-proyects {
-        padding: 10px;
+        padding: 30px;
         background-color: #ffffff;
         
         border-radius: 10px;
         width: 430px;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        
+        
 
         & .imagen-proyect {
-            padding: 2%;
-            width: 400px;
-            height: 250px;
-            border-radius: 10px 10px 0 0;   
+            
+            width: auto;
+            height: 200px;
+            border-radius: 5px;   
         }
 
-        & h2 {
-            font-size: 35px;
-            margin-top: 2%;
-            color: rgb(31 41 55);
+        & .titulo-link-card-proyect {
+
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 2% 0;
+            margin-bottom: 5%;
+            
+
+            & h3 {
+                font-size: var(--h3-size);
+                color: rgb(31 41 55);
+            }
+    
+            & button {
+                border: none;
+                background-color: #ffffff00;
+        
+                & a {
+                    
+                    & i {
+                        font-size: 1.8rem;
+                    }
+                }
+            }
         }
 
-        & div {
-            padding: 2%;
+        
+
+        & .tecnologias-logos-proyectos {
+            margin-top: 5%;
             display: flex;
             align-items: center;
             justify-content: center;
             gap: 10%;
 
             & span {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                width: auto;
-                gap: 6%;
-                background-color: rgb(94, 94, 94);
-                padding: 2% 8%;
-                border-radius: 10px;
 
                 & img {
                     color: #fff;
-                    width: 1em;
+                    width: 2.1em;
                     
-                }
-                & p {
-                    color: #fff;
-                    font-size: 0.9em;
                 }
             }
         }
+
         & .parrafo-proyect {
-            padding: 3%;
+            margin-bottom: 6%;
             font-weight: 500;
-            font-size: 18px;
+            font-size: 1.2em;
             width: 90%;
             color: rgb(51 65 81);
-        }
-
-        .button-github-preview button:hover {
-            background-color: rgb(0, 128, 0);
-            
-            & a{
-                color: #ffffff;
-                & i {
-                    color: #ffffff;
-                }
-            }
-        }
-
-        .button-github-preview {
-            display: flex;
-            justify-content: center;
-        
-            & button {
-                background-color: #fff;
-                border: 1px solid grey;
-                border-radius: 10px;
-                padding: 5%;
-        
-                & a {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    gap: 9%;
-                    text-decoration: none;
-                    font-size: 1.3em;
-                    
-                    & i {
-                        font-size: 1.5rem;
-                    }
-                }
-            }
+            letter-spacing: -1px;
         }
     }
 }
@@ -319,7 +303,7 @@ section {
 
 .container-principal-certificados {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 10em 1fr;
 }
 
 .linea-black-trayectoria {
@@ -331,8 +315,43 @@ section {
     & i {
         color: green;
         font-size: 2.5em;
-        margin: 3em 0 3em -15px;
+        margin: 1.9em 0 2.1em -18px;
     }
 }
 
+.container-certificados {
 
+    display: flex;
+    flex-direction: column;
+    
+    & article {
+        display: flex;
+        margin: 1.5em 0;
+        
+
+        & img {
+            width: 200px;
+            height: auto;
+            border-radius: 10px;
+        }
+
+        & div {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            margin-left: 5%;
+
+            & h3 {
+                color: var(--first-color-font);
+                font-size: var(--h3-size);
+                margin-bottom: 5px;
+            }
+
+            & p {
+                color: var(--second-color-font);
+                font-size: 1.3em;
+            }
+        }
+    }
+}
